--- a/notebooks/sequenceBetweenPuzzles.ipynb
+++ b/notebooks/sequenceBetweenPuzzles.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "\n",
-    "def sequenceWithinPuzzles(dataEvents, group = 'all'): \n",
+    "def sequenceBetweenPuzzles(dataEvents, group = 'all'): \n",
     "    \n",
     "    dataEvents['group'] = [json.loads(x)['group'] if 'group' in json.loads(x).keys() else '' for x in dataEvents['data']]\n",
     "    dataEvents['user'] = [json.loads(x)['user'] if 'user' in json.loads(x).keys() else '' for x in dataEvents['data']]\n",
@@ -239,7 +239,7 @@
     }
    ],
    "source": [
-    "pruebas = sequenceWithinPuzzles(dataEvents, group = 'all')\n",
+    "pruebas = sequenceBetweenPuzzles(dataEvents, group = 'all')\n",
     "pruebas"
    ]
   }
