--- a/notebooks/SequenceWithinPuzzles.ipynb
+++ b/notebooks/SequenceWithinPuzzles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataEvents = pd.read_csv('/Users/manuelgomezmoratilla/Desktop/TFG/data_processing_scripts/data/anonymized_dataset.csv', sep=\";\")"
+    "dataEvents = pd.read_csv('/Users/manuelgomezmoratilla/Desktop/TFG/data_processing_scripts/data/anonamyze_all_data_collection_v2.csv', sep=\";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
     "    \n",
     "    newDataEvents = []\n",
     "    #Select puzzle and actions\n",
-    "    notSelectedEvents = ['ws-mode_change', 'ws-click_nothing', 'ws-click_disabled', 'ws-select_shape', 'ws-deselect_shape', 'ws-paint', 'ws-palette_change', 'ws-toggle_paint_display']\n",
+    "    notSelectedEvents = ['ws-mode_change', 'ws-click_nothing', 'ws-click_disabled', 'ws-select_shape', 'ws-deselect_shape', 'ws-paint', 'ws-palette_change', 'ws-toggle_paint_display', 'ws-toggle_snapshot_display']\n",
     "    #Selected puzzles\n",
     "    selectedPuzzles = ['Square Cross-Sections', 'Bird Fez', 'Pi Henge', '45-Degree Rotations',  'Pyramids are Strange', 'Boxes Obscure Spheres', 'Object Limits', 'Warm Up', 'Angled Silhouette',\n",
     "                    'Sugar Cones','Stranger Shapes', 'Tall and Small', 'Ramp Up and Can It', 'More Than Meets Your Eye', 'Not Bird', 'Unnecesary', 'Zzz', 'Bull Market', 'Few Clues', 'Orange Dance', 'Bear Market']\n",
@@ -258,7 +258,7 @@
     "    for enum, event in data.iterrows():\n",
     "        key = event['group_user_id']\n",
     "        key_split = key.split('~')\n",
-    "        event['group'] = key_split[0]\n",
+    "        event['group_id'] = key_split[0]\n",
     "        event['user'] = key_split[1]\n",
     "        string = event['type']\n",
     "        match = re.findall(regexNum, string)\n",
@@ -272,13 +272,13 @@
     "            newData.append(event)\n",
     "            \n",
     "    \n",
-    "    data = pd.DataFrame(newData, columns=['group', 'user', 'task_id', 'n_attempt', 'type', 'n_times', 'metadata']) \n",
+    "    data = pd.DataFrame(newData, columns=['group_id', 'user', 'task_id', 'n_attempt', 'type', 'n_times', 'metadata']) \n",
     "    return data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>group</th>\n",
+       "      <th>group_id</th>\n",
        "      <th>user</th>\n",
        "      <th>task_id</th>\n",
        "      <th>n_attempt</th>\n",
@@ -313,54 +313,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>123</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
-       "      <td>Square Cross-Sections</td>\n",
+       "      <th>409322</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
        "      <td>1</td>\n",
        "      <td>ws-start_level</td>\n",
        "      <td>1</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>124</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
-       "      <td>Square Cross-Sections</td>\n",
+       "      <th>409340</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
        "      <td>1</td>\n",
        "      <td>ws-puzzle_started</td>\n",
        "      <td>1</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
-       "      <td>Square Cross-Sections</td>\n",
+       "      <th>409376</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
        "      <td>1</td>\n",
        "      <td>ws-create_shape</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'shape_id': 1, 'shape_type': 2}</td>\n",
+       "      <td>{'shape_id': 1, 'shape_type': 5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
-       "      <td>Square Cross-Sections</td>\n",
+       "      <th>409415</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
        "      <td>1</td>\n",
-       "      <td>ws-create_shape</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'shape_id': 2, 'shape_type': 4}</td>\n",
+       "      <td>ws-rotate_shape</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'shape_id': 1, 'shape_type': 5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>15246dfc4342ffe2601e4ecee9017eea</td>\n",
-       "      <td>Square Cross-Sections</td>\n",
+       "      <th>409470</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
        "      <td>1</td>\n",
        "      <td>ws-create_shape</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'shape_id': 3, 'shape_type': 2}</td>\n",
+       "      <td>{'shape_id': 2, 'shape_type': 5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -373,104 +373,104 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11438</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
-       "      <td>Not Bird</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ws-delete_shape</td>\n",
+       "      <th>396953</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'shape_id': 13, 'shape_type': 1}</td>\n",
+       "      <td>ws-rotate_view</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11442</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
-       "      <td>Not Bird</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ws-delete_shape</td>\n",
+       "      <th>396987</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
        "      <td>1</td>\n",
-       "      <td>{'shape_id': 15, 'shape_type': 1}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11915</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
-       "      <td>Not Bird</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ws-create_shape</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'shape_id': 17, 'shape_type': 6}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11918</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
-       "      <td>Not Bird</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ws-create_shape</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'shape_id': 18, 'shape_type': 5}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11919</th>\n",
-       "      <td>95cd1f045a0329cf5595ae734ae7ae43</td>\n",
-       "      <td>ab8c358afd1e639192d0abb1c5c0c9cb</td>\n",
-       "      <td>Not Bird</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ws-rotate_shape</td>\n",
+       "      <td>ws-move_shape</td>\n",
        "      <td>4</td>\n",
-       "      <td>{'shape_id': 18, 'shape_type': 5}</td>\n",
+       "      <td>{'shape_id': 3, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397091</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'shape_id': 1, 'shape_type': 6}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397103</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'shape_id': 2, 'shape_type': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397108</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'shape_id': 3, 'shape_type': 5}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1503 rows × 7 columns</p>\n",
+       "<p>80183 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  group                              user  \\\n",
-       "123    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "124    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "127    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "129    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "132    95cd1f045a0329cf5595ae734ae7ae43  15246dfc4342ffe2601e4ecee9017eea   \n",
-       "...                                 ...                               ...   \n",
-       "11438  95cd1f045a0329cf5595ae734ae7ae43  ab8c358afd1e639192d0abb1c5c0c9cb   \n",
-       "11442  95cd1f045a0329cf5595ae734ae7ae43  ab8c358afd1e639192d0abb1c5c0c9cb   \n",
-       "11915  95cd1f045a0329cf5595ae734ae7ae43  ab8c358afd1e639192d0abb1c5c0c9cb   \n",
-       "11918  95cd1f045a0329cf5595ae734ae7ae43  ab8c358afd1e639192d0abb1c5c0c9cb   \n",
-       "11919  95cd1f045a0329cf5595ae734ae7ae43  ab8c358afd1e639192d0abb1c5c0c9cb   \n",
+       "                                group_id                              user  \\\n",
+       "409322  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409340  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409376  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409415  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409470  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "...                                  ...                               ...   \n",
+       "396953  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "396987  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "397091  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "397103  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "397108  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
        "\n",
-       "                     task_id  n_attempt               type  n_times  \\\n",
-       "123    Square Cross-Sections          1     ws-start_level        1   \n",
-       "124    Square Cross-Sections          1  ws-puzzle_started        1   \n",
-       "127    Square Cross-Sections          1    ws-create_shape        1   \n",
-       "129    Square Cross-Sections          1    ws-create_shape        1   \n",
-       "132    Square Cross-Sections          1    ws-create_shape        1   \n",
-       "...                      ...        ...                ...      ...   \n",
-       "11438               Not Bird          3    ws-delete_shape        1   \n",
-       "11442               Not Bird          3    ws-delete_shape        1   \n",
-       "11915               Not Bird          3    ws-create_shape        1   \n",
-       "11918               Not Bird          3    ws-create_shape        1   \n",
-       "11919               Not Bird          3    ws-rotate_shape        4   \n",
+       "            task_id  n_attempt               type  n_times  \\\n",
+       "409322  Sugar Cones          1     ws-start_level        1   \n",
+       "409340  Sugar Cones          1  ws-puzzle_started        1   \n",
+       "409376  Sugar Cones          1    ws-create_shape        1   \n",
+       "409415  Sugar Cones          1    ws-rotate_shape        2   \n",
+       "409470  Sugar Cones          1    ws-create_shape        1   \n",
+       "...             ...        ...                ...      ...   \n",
+       "396953     Bird Fez          1     ws-rotate_view        1   \n",
+       "396987     Bird Fez          1      ws-move_shape        4   \n",
+       "397091     Bird Fez          1      ws-move_shape        3   \n",
+       "397103     Bird Fez          1      ws-move_shape        1   \n",
+       "397108     Bird Fez          1      ws-move_shape        3   \n",
        "\n",
        "                                metadata  \n",
-       "123                                   {}  \n",
-       "124                                   {}  \n",
-       "127     {'shape_id': 1, 'shape_type': 2}  \n",
-       "129     {'shape_id': 2, 'shape_type': 4}  \n",
-       "132     {'shape_id': 3, 'shape_type': 2}  \n",
+       "409322                                {}  \n",
+       "409340                                {}  \n",
+       "409376  {'shape_id': 1, 'shape_type': 5}  \n",
+       "409415  {'shape_id': 1, 'shape_type': 5}  \n",
+       "409470  {'shape_id': 2, 'shape_type': 5}  \n",
        "...                                  ...  \n",
-       "11438  {'shape_id': 13, 'shape_type': 1}  \n",
-       "11442  {'shape_id': 15, 'shape_type': 1}  \n",
-       "11915  {'shape_id': 17, 'shape_type': 6}  \n",
-       "11918  {'shape_id': 18, 'shape_type': 5}  \n",
-       "11919  {'shape_id': 18, 'shape_type': 5}  \n",
+       "396953                                {}  \n",
+       "396987  {'shape_id': 3, 'shape_type': 5}  \n",
+       "397091  {'shape_id': 1, 'shape_type': 6}  \n",
+       "397103  {'shape_id': 2, 'shape_type': 1}  \n",
+       "397108  {'shape_id': 3, 'shape_type': 5}  \n",
        "\n",
-       "[1503 rows x 7 columns]"
+       "[80183 rows x 7 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,6 +479,13 @@
     "df = sequenceWithinPuzzles(dataEvents)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
