--- a/notebooks/SequenceWithinPuzzles.ipynb
+++ b/notebooks/SequenceWithinPuzzles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,138 +149,126 @@
     "    taskDf = pd.DataFrame(newDataEvents, columns=['id', 'time', 'group_user_id', 'task_id', 'n_attempt', 'type', 'metadata']) \n",
     "\n",
     "    data = taskDf\n",
-    "    listEvent = ['ws-rotate_view', 'ws-rotate_shape', 'ws-undo_action','ws-move_shape','ws-snapshot','ws-scale_shape']\n",
+    "    listEvent = ['ws-rotate_view', 'ws-rotate_shape', 'ws-undo_action', 'ws-move_shape', 'ws-snapshot', 'ws-scale_shape']\n",
     "    \n",
-    "    for nameEvent in listEvent:\n",
-    "        dataConvert2 = []\n",
-    "        for user in data['group_user_id'].unique():\n",
-    "            individualDf = data[data['group_user_id'] == user]\n",
-    "            #Current action set\n",
-    "            currentAction = []\n",
-    "            #String with action types\n",
-    "            actionString = \"\"\n",
-    "            for enum, event in individualDf.iterrows():\n",
-    "                #Add new action to the string\n",
-    "                prov = actionString + event['type'] + \" \"\n",
-    "                regex = \"(\" + nameEvent + \")+\"\n",
-    "                #Sustituimos y si solo hay eventos del tipo que buscamos debera quedar \"\".\n",
-    "                #Replace event, should be \"\" if all event types are nameEvent.\n",
-    "                string = re.sub(regex ,\"\", prov)\n",
-    "                srem = re.sub(\" \", \"\", string)\n",
-    "                if (srem != \"\"):\n",
-    "                    coinc = re.findall(regex, prov)\n",
-    "                    #No coincidences.\n",
-    "                    if (len(coinc) == 0):                    \n",
-    "                        prov = \"\"\n",
-    "                        actionString= \"\"\n",
-    "                        if (len(currentAction) > 0):\n",
-    "                            for a in currentAction:\n",
-    "                                dataConvert2.append(a)\n",
-    "                            dataConvert2.append(event)\n",
+    "    dataConvert2 = []\n",
+    "    for user in data['group_user_id'].unique():\n",
+    "        individualDf = data[data['group_user_id'] == user]\n",
+    "        #Current action set\n",
+    "        currentAction = []\n",
+    "        #String with action types\n",
+    "        actionString = \"\"\n",
+    "        actualEvent = 'None'\n",
+    "        for enum, event in individualDf.iterrows():\n",
+    "            key = event['group_user_id']\n",
+    "            key_split = key.split('~')\n",
+    "            event['group_id'] = key_split[0]\n",
+    "            event['user'] = key_split[1]\n",
+    "            actualEvent = event['type']\n",
+    "            eq = True\n",
+    "            for a in currentAction:\n",
+    "                if (a['type'] != actualEvent):\n",
+    "                    #Ver si podemos compactar\n",
+    "                    eq = False\n",
+    "                    \n",
+    "            if (eq == False):      \n",
+    "                igual = True\n",
+    "                prev = \"\"\n",
+    "                for a2 in currentAction:\n",
+    "                    if (a2['type'] != prev):\n",
+    "                        if (prev == \"\") :\n",
+    "                            igual = True\n",
     "                        else:\n",
-    "                            dataConvert2.append(event)\n",
-    "                        currentAction.clear()\n",
-    "                    #One coincidence\n",
-    "                    elif(len(coinc) == 1):\n",
-    "                        #Se añade la accion anterior al DF, se añade la actual al buffer y seguimos buscando.\n",
-    "                        if (len(currentAction) > 0) :\n",
-    "                            dataConvert2.append(currentAction[0])\n",
-    "                            currentAction.clear()\n",
-    "                            currentAction.append(event)\n",
-    "                            actionString = \"\"\n",
-    "                            actionString = actionString + event['type'] + \" \"\n",
-    "                            prov = \"\"\n",
-    "                    #Hay más de una coincidencia. Se coge el numero total, se añade al dataFrame quitando el ultimo\n",
-    "                    #evento que es el que es diferente al resto y se vuelve a añadir al buffer para seguir buscando a \n",
-    "                    #partir de el.\n",
-    "                    #Two or more coincidences. Add the action with # of repetitions and continue.\n",
-    "                    else:\n",
-    "                        add = currentAction[0]\n",
-    "                        add['type'] = nameEvent + 'x' + str(len(coinc))\n",
-    "                        dataConvert2.append(add)\n",
-    "                        currentAction.clear()\n",
-    "                        currentAction.append(event)\n",
-    "                        actionString = \"\"\n",
-    "                        actionString = actionString + event['type'] + \" \"\n",
-    "                        prov = \"\"  \n",
-    "                #Check if it is the same shape_id or not\n",
+    "                            igual = False\n",
+    "                    prev = a2['type']\n",
+    "                if ((igual == True) and (prev in listEvent)):\n",
+    "                    add = currentAction[0]\n",
+    "                    #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
+    "                    add['n_times'] = len(currentAction)\n",
+    "                    dataConvert2.append(add)\n",
+    "                    currentAction.clear()\n",
+    "                    currentAction.append(event)     \n",
+    "                else: #igual != True \n",
+    "                    for a in currentAction:\n",
+    "                        a['n_times'] = 1\n",
+    "                        dataConvert2.append(a)\n",
+    "                    currentAction.clear()\n",
+    "                    currentAction.append(event)\n",
+    "            else: #eq = True\n",
+    "                if (event['type'] not in listEvent):\n",
+    "                    currentAction.append(event)\n",
+    "                    for a in currentAction:\n",
+    "                        a['n_times'] = 1\n",
+    "                        dataConvert2.append(a)\n",
+    "                    currentAction.clear()\n",
+    "                    \n",
     "                else:\n",
     "                    if (len(currentAction) > 0):\n",
-    "                        if (currentAction[0]['type'] in eventsWithMetaData):\n",
-    "                            #Event with metadata, check if it is the same shape_id\n",
-    "                            if (currentAction[0]['metadata']['shape_id'] == event['metadata']['shape_id']):\n",
-    "                                actionString = actionString + event['type'] + \" \"\n",
-    "                                currentAction.append(event)\n",
+    "                            if (currentAction[0]['type'] in eventsWithMetaData):\n",
+    "                                #Event with metadata, check if it is the same shape_id\n",
+    "                                if (currentAction[0]['metadata']['shape_id'] == event['metadata']['shape_id']):\n",
+    "                                    currentAction.append(event)\n",
+    "                                else:\n",
+    "                                    add = currentAction[0]\n",
+    "                                    #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
+    "                                    add['n_times'] = len(currentAction)\n",
+    "                                    dataConvert2.append(add)\n",
+    "                                    currentAction.clear()\n",
+    "                                    currentAction.append(event)\n",
+    "                            #Event without metaData, just concatenate.\n",
     "                            else:\n",
-    "                                add = currentAction[0]\n",
-    "                                coinc3 = re.findall(regex, actionString)\n",
-    "                                add['type'] = nameEvent + 'x' + str(len(coinc3))\n",
-    "                                dataConvert2.append(add)\n",
-    "                                actionString = \"\"\n",
-    "                                actionString = actionString + event['type'] + \" \"\n",
-    "                                currentAction.clear()\n",
-    "                                currentAction.append(event)\n",
-    "                                prov = \"\"\n",
-    "                        #Event without metaData, just concatenate.\n",
-    "                        else:\n",
-    "                            actionString = actionString + event['type'] + \" \"\n",
-    "                            currentAction.append(event) \n",
-    "                            \n",
+    "                                currentAction.append(event) \n",
+    "\n",
     "                    elif (len(currentAction) == 0):\n",
-    "                        actionString = actionString + event['type'] + \" \"\n",
     "                        currentAction.append(event)\n",
-    "                                   \n",
-    "            #Add last elems\n",
-    "            #We must check if last elems can be also replaced.\n",
-    "            final = \"\"\n",
-    "            if (len(currentAction) > 0):\n",
-    "                for e in currentAction:\n",
-    "                    final = final + e['type'] + \" \"\n",
-    "                string2 = re.sub(regex ,\"\", final)\n",
-    "                srem2 = re.sub(\" \", \"\", string2)\n",
-    "                if (srem2 != \"\"):\n",
-    "                #Add each action to the list\n",
-    "                    for e in currentAction :\n",
-    "                        dataConvert2.append(e)\n",
-    "                else:\n",
-    "                    coinc2 = re.findall(regex, final)\n",
-    "                    add = currentAction[0]\n",
-    "                    add['type'] = nameEvent + 'x' + str(len(coinc2))\n",
-    "                    dataConvert2.append(add)\n",
-    "        \n",
-    "        #Create dataframe from list\n",
-    "        consecutiveDf = pd.DataFrame(dataConvert2, columns=['id', 'time', 'group_user_id', 'task_id', 'n_attempt', 'type', 'metadata']) \n",
-    "        data = consecutiveDf\n",
-    "    \n",
-    "    newData = []\n",
-    "    regexNum = '[0-9]+$'\n",
-    "    regexNumX = '(x[0-9]+$)'\n",
-    "    for enum, event in data.iterrows():\n",
-    "        key = event['group_user_id']\n",
-    "        key_split = key.split('~')\n",
-    "        event['group_id'] = key_split[0]\n",
-    "        event['user'] = key_split[1]\n",
-    "        string = event['type']\n",
-    "        match = re.findall(regexNum, string)\n",
-    "        if (len(match) == 1) :\n",
-    "            event['n_times'] = (int)(match[0])\n",
-    "            matchX = re.findall(regexNumX, string)\n",
-    "            event['type'] = string.split(matchX[0])[0] \n",
-    "            newData.append(event)\n",
-    "        else :\n",
-    "            event['n_times'] = 1\n",
-    "            newData.append(event)\n",
-    "            \n",
-    "    \n",
-    "    data = pd.DataFrame(newData, columns=['group_id', 'user', 'task_id', 'n_attempt', 'type', 'n_times', 'metadata']) \n",
-    "    return data\n"
+    "                \n",
+    "                    \n",
+    "        #Add last elems\n",
+    "        #We must check if last elems can be also replaced.\n",
+    "        final = \"\"\n",
+    "        if (len(currentAction) > 0):\n",
+    "            igual2 = True\n",
+    "            prev = \"\"\n",
+    "            for a2 in currentAction:\n",
+    "                if (a2['type'] != prev):\n",
+    "                    if (prev == \"\") :\n",
+    "                        igual2 = True\n",
+    "                    else:\n",
+    "                        igual2 = False\n",
+    "                prev = a2['type']\n",
+    "            if ((igual == True) and (prev in listEvent)):\n",
+    "                add = currentAction[0]\n",
+    "                #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
+    "                add['n_times'] = len(currentAction)\n",
+    "                dataConvert2.append(add)\n",
+    "                currentAction.clear()\n",
+    "                currentAction.append(event)     \n",
+    "            else: #igual != True \n",
+    "                for a in currentAction:\n",
+    "                    a['n_times'] = 1\n",
+    "                    dataConvert2.append(a)\n",
+    "                currentAction.clear()\n",
+    "                currentAction.append(event)\n",
+    "               \n",
+    "    #Create dataframe from list\n",
+    "    #consecutiveDf = pd.DataFrame(dataConvert2, columns=['id', 'time', 'group_user_id', 'task_id', 'n_attempt', 'type', 'metadata'])         \n",
+    "    data = pd.DataFrame(dataConvert2, columns=['group_id', 'user', 'task_id', 'n_attempt', 'type', 'n_times', 'metadata']) \n",
+    "    return data\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "163183\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -470,7 +458,7 @@
        "[80183 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
