--- a/notebooks/SequenceWithinPuzzles.ipynb
+++ b/notebooks/SequenceWithinPuzzles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,16 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataEvents = pd.read_csv('/Users/manuelgomezmoratilla/Desktop/TFG/data_processing_scripts/data/anonamyze_all_data_collection_v2.csv', sep=\";\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +41,7 @@
     "    \n",
     "    newDataEvents = []\n",
     "    #Select puzzle and actions\n",
-    "    notSelectedEvents = ['ws-mode_change', 'ws-click_nothing', 'ws-click_disabled', 'ws-select_shape', 'ws-deselect_shape', 'ws-paint', 'ws-palette_change', 'ws-toggle_paint_display', 'ws-toggle_snapshot_display']\n",
+    "    notSelectedEvents = ['ws-mode_change', 'ws-click_nothing', 'ws-click_disabled', 'ws-select_shape', 'ws-deselect_shape', 'ws-paint', 'ws-palette_change', 'ws-toggle_paint_display', 'ws-toggle_snapshot_display', 'ws-create_user', 'ws-redo_action', 'ws-undo_action', 'ws-restart_puzzle', 'ws-puzzle_started']\n",
     "    #Selected puzzles\n",
     "    selectedPuzzles = ['Square Cross-Sections', 'Bird Fez', 'Pi Henge', '45-Degree Rotations',  'Pyramids are Strange', 'Boxes Obscure Spheres', 'Object Limits', 'Warm Up', 'Angled Silhouette',\n",
     "                    'Sugar Cones','Stranger Shapes', 'Tall and Small', 'Ramp Up and Can It', 'More Than Meets Your Eye', 'Not Bird', 'Unnecesary', 'Zzz', 'Bull Market', 'Few Clues', 'Orange Dance', 'Bear Market']\n",
@@ -87,10 +78,6 @@
     "                elif(event['type'] == 'ws-start_level'):\n",
     "                    activePuzzle = json.loads(event['data'])['task_id']\n",
     "                    event['task_id'] = activePuzzle\n",
-    "                    if (event['task_id'] in selectedPuzzles):\n",
-    "                        event['n_attempt'] = nAttempt\n",
-    "                        event['metadata'] = dict()\n",
-    "                        newDataEvents.append(event)\n",
     "\n",
     "                elif (event['type'] == 'ws-create_shape'):\n",
     "                    event['task_id'] = activePuzzle\n",
@@ -131,7 +118,7 @@
     "                        event['metadata']['shape_type'] = shape_type \n",
     "                        newDataEvents.append(event)\n",
     "\n",
-    "                elif ((event['type'] == 'ws-exit_to_menu') and (activePuzzle in selectedPuzzles)):\n",
+    "                elif ((event['type'] in ['ws-exit_to_menu', 'ws-login_user']) and (activePuzzle in selectedPuzzles)):\n",
     "                    figureDict.clear()\n",
     "                    nAttempt +=1\n",
     "   \n",
@@ -149,6 +136,7 @@
     "    taskDf = pd.DataFrame(newDataEvents, columns=['id', 'time', 'group_user_id', 'task_id', 'n_attempt', 'type', 'metadata']) \n",
     "\n",
     "    data = taskDf\n",
+    "                        \n",
     "    listEvent = ['ws-rotate_view', 'ws-rotate_shape', 'ws-undo_action', 'ws-move_shape', 'ws-snapshot', 'ws-scale_shape']\n",
     "    \n",
     "    dataConvert2 = []\n",
@@ -184,13 +172,15 @@
     "                if ((igual == True) and (prev in listEvent)):\n",
     "                    add = currentAction[0]\n",
     "                    #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
-    "                    add['n_times'] = len(currentAction)\n",
+    "                    add['n_times'] = dict()\n",
+    "                    add['n_times'][add['type']] = len(currentAction)\n",
     "                    dataConvert2.append(add)\n",
     "                    currentAction.clear()\n",
     "                    currentAction.append(event)     \n",
     "                else: #igual != True \n",
     "                    for a in currentAction:\n",
-    "                        a['n_times'] = 1\n",
+    "                        a['n_times'] = dict()\n",
+    "                        a['n_times'][a['type']] = 1\n",
     "                        dataConvert2.append(a)\n",
     "                    currentAction.clear()\n",
     "                    currentAction.append(event)\n",
@@ -198,7 +188,8 @@
     "                if (event['type'] not in listEvent):\n",
     "                    currentAction.append(event)\n",
     "                    for a in currentAction:\n",
-    "                        a['n_times'] = 1\n",
+    "                        a['n_times'] = dict()\n",
+    "                        a['n_times'][a['type']] = 1\n",
     "                        dataConvert2.append(a)\n",
     "                    currentAction.clear()\n",
     "                    \n",
@@ -211,7 +202,8 @@
     "                                else:\n",
     "                                    add = currentAction[0]\n",
     "                                    #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
-    "                                    add['n_times'] = len(currentAction)\n",
+    "                                    add['n_times'] = dict()\n",
+    "                                    add['n_times'][add['type']] = len(currentAction)\n",
     "                                    dataConvert2.append(add)\n",
     "                                    currentAction.clear()\n",
     "                                    currentAction.append(event)\n",
@@ -239,13 +231,15 @@
     "            if ((igual == True) and (prev in listEvent)):\n",
     "                add = currentAction[0]\n",
     "                #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
-    "                add['n_times'] = len(currentAction)\n",
+    "                add['n_times'] = dict()\n",
+    "                add['n_times'][add['type']] = len(currentAction)\n",
     "                dataConvert2.append(add)\n",
     "                currentAction.clear()\n",
     "                currentAction.append(event)     \n",
     "            else: #igual != True \n",
     "                for a in currentAction:\n",
-    "                    a['n_times'] = 1\n",
+    "                    a['n_times'] = dict()\n",
+    "                    a['n_times'][a['type']] = 1\n",
     "                    dataConvert2.append(a)\n",
     "                currentAction.clear()\n",
     "                currentAction.append(event)\n",
@@ -253,219 +247,21 @@
     "    #Create dataframe from list\n",
     "    #consecutiveDf = pd.DataFrame(dataConvert2, columns=['id', 'time', 'group_user_id', 'task_id', 'n_attempt', 'type', 'metadata'])         \n",
     "    data = pd.DataFrame(dataConvert2, columns=['group_id', 'user', 'task_id', 'n_attempt', 'type', 'n_times', 'metadata']) \n",
-    "    return data\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "163183\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>group_id</th>\n",
-       "      <th>user</th>\n",
-       "      <th>task_id</th>\n",
-       "      <th>n_attempt</th>\n",
-       "      <th>type</th>\n",
-       "      <th>n_times</th>\n",
-       "      <th>metadata</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>409322</th>\n",
-       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
-       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-start_level</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409340</th>\n",
-       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
-       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-puzzle_started</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409376</th>\n",
-       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
-       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-create_shape</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'shape_id': 1, 'shape_type': 5}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409415</th>\n",
-       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
-       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-rotate_shape</td>\n",
-       "      <td>2</td>\n",
-       "      <td>{'shape_id': 1, 'shape_type': 5}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>409470</th>\n",
-       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
-       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
-       "      <td>Sugar Cones</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-create_shape</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'shape_id': 2, 'shape_type': 5}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396953</th>\n",
-       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
-       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
-       "      <td>Bird Fez</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-rotate_view</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>396987</th>\n",
-       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
-       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
-       "      <td>Bird Fez</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-move_shape</td>\n",
-       "      <td>4</td>\n",
-       "      <td>{'shape_id': 3, 'shape_type': 5}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397091</th>\n",
-       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
-       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
-       "      <td>Bird Fez</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-move_shape</td>\n",
-       "      <td>3</td>\n",
-       "      <td>{'shape_id': 1, 'shape_type': 6}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397103</th>\n",
-       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
-       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
-       "      <td>Bird Fez</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-move_shape</td>\n",
-       "      <td>1</td>\n",
-       "      <td>{'shape_id': 2, 'shape_type': 1}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>397108</th>\n",
-       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
-       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
-       "      <td>Bird Fez</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ws-move_shape</td>\n",
-       "      <td>3</td>\n",
-       "      <td>{'shape_id': 3, 'shape_type': 5}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>80183 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                group_id                              user  \\\n",
-       "409322  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
-       "409340  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
-       "409376  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
-       "409415  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
-       "409470  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
-       "...                                  ...                               ...   \n",
-       "396953  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
-       "396987  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
-       "397091  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
-       "397103  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
-       "397108  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
-       "\n",
-       "            task_id  n_attempt               type  n_times  \\\n",
-       "409322  Sugar Cones          1     ws-start_level        1   \n",
-       "409340  Sugar Cones          1  ws-puzzle_started        1   \n",
-       "409376  Sugar Cones          1    ws-create_shape        1   \n",
-       "409415  Sugar Cones          1    ws-rotate_shape        2   \n",
-       "409470  Sugar Cones          1    ws-create_shape        1   \n",
-       "...             ...        ...                ...      ...   \n",
-       "396953     Bird Fez          1     ws-rotate_view        1   \n",
-       "396987     Bird Fez          1      ws-move_shape        4   \n",
-       "397091     Bird Fez          1      ws-move_shape        3   \n",
-       "397103     Bird Fez          1      ws-move_shape        1   \n",
-       "397108     Bird Fez          1      ws-move_shape        3   \n",
-       "\n",
-       "                                metadata  \n",
-       "409322                                {}  \n",
-       "409340                                {}  \n",
-       "409376  {'shape_id': 1, 'shape_type': 5}  \n",
-       "409415  {'shape_id': 1, 'shape_type': 5}  \n",
-       "409470  {'shape_id': 2, 'shape_type': 5}  \n",
-       "...                                  ...  \n",
-       "396953                                {}  \n",
-       "396987  {'shape_id': 3, 'shape_type': 5}  \n",
-       "397091  {'shape_id': 1, 'shape_type': 6}  \n",
-       "397103  {'shape_id': 2, 'shape_type': 1}  \n",
-       "397108  {'shape_id': 3, 'shape_type': 5}  \n",
-       "\n",
-       "[80183 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = sequenceWithinPuzzles(dataEvents)\n",
-    "df"
+    "    \n",
+    "    #Recalculate n_attempt\n",
+    "    mod = []\n",
+    "    for user in data['user'].unique():\n",
+    "            previousAttempt = 1\n",
+    "            n_attempt = 1\n",
+    "            individualDf = data[data['user'] == user]\n",
+    "            for enum, event in individualDf.iterrows():\n",
+    "                if (event['n_attempt'] != previousAttempt):\n",
+    "                    n_attempt += 1\n",
+    "                previousAttempt = event['n_attempt']\n",
+    "                event['n_attempt'] = n_attempt\n",
+    "                mod.append(event)\n",
+    "    modDf = pd.DataFrame(mod, columns=['group_id', 'user', 'task_id', 'n_attempt', 'type', 'n_times', 'metadata'])\n",
+    "    return modDf"
    ]
   },
   {
@@ -473,7 +269,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = sequenceWithinPuzzles(dataEvents)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
@@ -496,5 +295,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
